fixed scrollbar in firefox and adjusted text size in the mobile navbar

--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,13 @@ body::-webkit-scrollbar {
     background: transparent;
 }
 
+html {
+    scrollbar-width: none;
+}
+
 body {
     -ms-overflow-style: none;
-    scrollbar-width: none;
+    overflow: -moz-scrollbars-none;
 }
 
 .type-animation-green {
